[package]
name = "awwsy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "1.0.1"
thiserror = "1.0.50"
once_cell = "1.18.0"
futures = "0.3.29"
serde = { version = "1.0.193", optional = true }
aws-sdk-s3 = { version = "1.4.0", optional = true }
aws-sdk-sqs = { version = "1.3.0", optional = true }
serde_json = { version = "1.0.108", optional = true }

[features]
default = []
s3 = ["dep:aws-sdk-s3"]
sqs = ["dep:aws-sdk-sqs", "dep:serde_json", "dep:serde"]
