[package]
name = "awwsy"
version = "0.3.0"
edition = "2021"
license = "MIT"
readme = "README.md"
description = "Convenient AWS SDK Wrappers"
publish = true

[profile.release]
panic = "abort"
opt-level = 3     # 0-3
strip = 'symbols' # strip symbols from binary
lto = true        # enable link time optimization

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
aws-config = "1.0.1"
once_cell = "1.18.0"
futures = "0.3.29"
thiserror = { version = "1.0.50", optional = true }
serde = { version = "1.0.193", optional = true }
aws-sdk-s3 = { version = "1.4.0", optional = true }
aws-sdk-sqs = { version = "1.3.0", optional = true }
serde_json = { version = "1.0.108", optional = true }
aws_lambda_events = { version = "0.12.1", optional = true }
aws-sdk-rekognition = { version = "1.3.0", optional = true }
tracing = { version = "0.1.40", optional = true }
nanoid = { version = "0.4.0", optional = true }
lambda_runtime = { version = "0.8.3", optional = true }

[features]
default = []
lambda_events = ["dep:aws_lambda_events"]
lambda_runtime = ["dep:lambda_runtime"]
s3 = ["dep:thiserror", "dep:tracing", "dep:aws-sdk-s3"]
sqs = [
    "dep:thiserror",
    "dep:tracing",
    "dep:aws-sdk-sqs",
    "dep:serde_json",
    "dep:serde",
    "dep:nanoid",
    "dep:aws_lambda_events",
]
rekognition = ["dep:thiserror", "dep:tracing", "dep:aws-sdk-rekognition"]

[dev-dependencies]
anyhow = "1.0.75"
tokio = { version = "1.34.0", features = ["rt-multi-thread", "macros"] }
